@@ -1,3 +1,5 @@
+	* deprecate "send_stats" property on trackers (since lt_tracker extension has
+	  been removed)
 	* remove deprecate session_settings API (use settings_pack instead)
 	* improve file layout optimization when creating torrents with padfiles
 	* remove remote_dl_rate feature
